# football_ws

./: .gitignore  README.md
src/humanoid_football/: package.xml  setup.cfg  setup.py
src/humanoid_football/humanoid_football/: ball_controller.py  robot_controller.py
src/humanoid_football/launch/: football_simulation.launch.py
src/humanoid_football/urdf/: football_ball.urdf  humanoid_robot.xacro  robot_blue.xacro  robot_red.xacro
src/humanoid_football/worlds/: football_field.world
