<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_football</name>
  <version>0.0.0</version>
  <description>ROS 2 package for humanoid robots playing football in Gazebo simulation</description>
  <maintainer email="abdul_raheem@todo.todo">abdul_raheem</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
